// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with accessory 1`] = `
<View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "backgroundColor": "#FFF",
        },
        Object {
          "flexGrow": 1,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 44,
            "paddingLeft": 15,
            "paddingRight": 20,
          },
          Object {},
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "justifyContent": "center",
            "paddingVertical": 10,
          }
        }
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            Array [
              Object {
                "alignSelf": "center",
                "fontSize": 12,
                "marginRight": 5,
                "textAlign": "right",
                "width": 75,
              },
              Object {
                "color": "#007AFF",
              },
              Object {},
            ]
          }
        >
          Detail
        </Text>
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 12,
              },
              Object {
                "color": "#000",
              },
            ]
          }
        >
          LeftDetail
        </Text>
      </View>
      <View
        style={
          Object {
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#c7c7cc",
                "borderRightWidth": 1,
                "borderTopWidth": 1,
                "height": 10,
                "marginLeft": 7,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 10,
              },
              Object {
                "borderColor": "#C7C7CC",
              },
            ]
          }
        />
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders with accessory and onPressDetailAccessory 1`] = `
<View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "backgroundColor": "#FFF",
        },
        Object {
          "flexGrow": 1,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 44,
            "paddingLeft": 15,
            "paddingRight": 20,
          },
          Object {},
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "justifyContent": "center",
            "paddingVertical": 10,
          }
        }
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            Array [
              Object {
                "alignSelf": "center",
                "fontSize": 12,
                "marginRight": 5,
                "textAlign": "right",
                "width": 75,
              },
              Object {
                "color": "#007AFF",
              },
              Object {},
            ]
          }
        >
          Detail
        </Text>
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 12,
              },
              Object {
                "color": "#000",
              },
            ]
          }
        >
          LeftDetail
        </Text>
      </View>
      <View
        style={
          Object {
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderColor": "#c7c7cc",
                "borderRightWidth": 1,
                "borderTopWidth": 1,
                "height": 10,
                "marginLeft": 7,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 10,
              },
              Object {
                "borderColor": "#C7C7CC",
              },
            ]
          }
        />
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders with left detail 1`] = `
<View>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "backgroundColor": "#FFF",
        },
        Object {
          "flexGrow": 1,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 44,
            "paddingLeft": 15,
            "paddingRight": 20,
          },
          Object {},
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "justifyContent": "center",
            "paddingVertical": 10,
          }
        }
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            Array [
              Object {
                "alignSelf": "center",
                "fontSize": 12,
                "marginRight": 5,
                "textAlign": "right",
                "width": 75,
              },
              Object {
                "color": "#007AFF",
              },
              Object {},
            ]
          }
        >
          Detail
        </Text>
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            Array [
              Object {
                "flexGrow": 1,
                "fontSize": 12,
              },
              Object {
                "color": "#000",
              },
            ]
          }
        >
          LeftDetail
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;
